--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <div class="note white" data-note="C"></div>
-    <div class="note white used" data-note="D"></div>
-    <div class="note white used" data-note="E"></div>
-    <div class="note white used" data-note="F"></div>
-    <div class="note white" data-note="G"></div>
+    <div class="note white" data-note="D"></div>
+    <div class="note white" data-note="E"></div>
+    <div class="note white" data-note="F"><img style="margin-left: 30px;" src="img/empreinteblancheF.png" alt=""></div>
+    <div class="note white" data-note="G"><img src="img/empreinteblancheF.png" alt=""></div>
     <div class="note white" data-note="A"></div>
     <div class="note white" data-note="B"></div>
     <div class="note white" data-note="CBis"></div>
     <div class="note black used" data-note="CD" id="noteCD"></div>
     <div class="note black" data-note="DD" id="noteDD"></div>
     <div class="note black" data-note="FD" id="noteFD"></div>
-    <div class="note black" data-note="GD" id="noteGD"></div>
+    <div class="note black" data-note="GD" id="noteGD"><img src="img/EmpreinteNoireF.png" alt=""></div>
     <div class="note black" data-note="AD" id="noteAD"></div>
 
     <audio src="sounds/C.wav" id="C"></audio>
@@ -37,7 +37,7 @@
     <audio src="sounds/B.wav" id="B"></audio>
     <audio src="sounds/CBis.wav" id="CBis"></audio>
 
-    <div id="codecache"><p>3554</p></div>
+    <div id="codecache"><p>Entre les touches vous trouvez un morceau de papier. Il y est inscrit "kub". Il s'agit probablement d'une partie du mot de passe.</p></div>
 
 
 </body>
