--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="note white" data-note="C"></div>
     <div class="note white" data-note="D"></div>
     <div class="note white" data-note="E"></div>
-    <div class="note white" data-note="F"><img style="margin-left: 30px;" src="img/empreinteblancheF.png" alt=""></div>
-    <div class="note white" data-note="G"><img src="img/empreinteblancheF.png" alt=""></div>
+    <div class="note white" data-note="F"><img  src="img/empreinteblancheF.png" alt=""></div>
+    <div class="note white" data-note="G"><img id="plusbas" src="img/empreinteblancheF.png" alt=""></div>
     <div class="note white" data-note="A"></div>
     <div class="note white" data-note="B"></div>
     <div class="note white" data-note="CBis"></div>
